# learn_opencv

./: CMakeLists.txt  README.md  main.cpp
